# cmake_stm32

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  readme.md  stm32f103rb.ld
cmake/: arm-none-eabi-toolchain.cmake  catch2.cmake  cppu_test.cmake  openlibcm.cmake
inc/: CMakeLists.txt  my_function.hpp
src/: CMakeLists.txt  main.cpp  my_function.cpp
tests/: CMakeLists.txt  test.cpp
